--- a/calculadora-imc.css
+++ b/calculadora-imc.css
@@ -98,5 +98,5 @@ main{
 }
 
 #calcular, #limpar:hover{
-    background-color: linear-gradient(rgb(105, 9, 168),rgb(62, 23, 95),rgb(41, 4, 63));
+    color: black;
 }
