--- a/calculadora-imc.css
+++ b/calculadora-imc.css
@@ -96,3 +96,12 @@ main{
     box-sizing: border-box;
     user-select: none;
 }
+
+#limpar:hover{
+    color: rgb(41, 11, 68);
+}
+
+#calcular:hover{
+    color: rgb(41, 11, 68);
+}
+
